# SdlUi

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
tests/: debug.cpp  main.cpp  test_vector.cpp  test_widget.cpp  testing.h
ui/: SdlUi.cpp  SdlUi.h  Vector.cpp  Vector.h  Widget.cpp  Widget.h  Window.cpp  Window.h
